...
                                            <outlet property="name" destination="wbL-Cn-SfC" id="H2q-th-wbC"/>
                                            <outlet property="vendorName" destination="RcN-Sf-f4A" id="LFL-HB-l2Y"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="mainTable"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="7qn-AN-wQO"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="LyG-E3-r9y"/>
                                </connections>
                            </tableView>
...
                            <constraint firstAttribute="trailingMargin" secondItem="DPY-G8-pCO" secondAttribute="trailing" id="m1I-zV-eFy"/>
                            <constraint firstItem="DPY-G8-pCO" firstAttribute="top" secondItem="vlp-tB-xNv" secondAttribute="bottom" constant="45" id="oL2-L2-ZqO"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="name" destination="DPY-G8-pCO" id="tDU-7A-crd"/>
                        <outlet property="units" destination="IC3-z3-ANU" id="wGf-EW-JJ5"/>
                        <outlet property="vendor" destination="J2s-rM-2CT" id="Hac-VN-quV"/>
                        <outlet property="vendorLogo" destination="IaU-1S-2Do" id="K9D-HT-LpB"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ix1-Cc-SsC" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
                        <viewControllerLayoutGuide type="bottom" id="nIr-0b-fKh"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="69Q-aT-N7I">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="model" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WmQ-EH-Fqv">
                                <rect key="frame" x="16" y="90" width="343" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="units" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tcy-Bt-dfz">
                                <rect key="frame" x="16" y="158" width="343" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="make" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rDB-25-2JZ">
                                <rect key="frame" x="16" y="234" width="343" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q4r-t0-82l">
                                <rect key="frame" x="16" y="318" width="343" height="30"/>
                                <state key="normal" title="Add"/>
                                <connections>
                                    <action selector="addButton_click:" destination="1mO-B8-aWF" eventType="touchUpInside" id="iJ6-2L-K4H"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
