...
    
    var items: [InventoryItem] = []
    let days = [25, 30, 35, 40]
    
    @discardableResult
    override init() {
        items.append(InventoryItem(name: "Highlander", units: 50, manufacturerName: "Toyota"))
        items.append(InventoryItem(name: "Altima", units: 40, manufacturerName: "Chevy"))
        items.append(InventoryItem(name: "Focus", units: 70, manufacturerName: "Ford"))
        items.append(InventoryItem(name: "Imperaza", units: 10, manufacturerName: "Chevy"))
    }
    
    func add(item: InventoryItem) {
...
