...
                            <constraint firstItem="abZ-ui-Epz" firstAttribute="top" secondItem="9uQ-FX-Tgd" secondAttribute="top" id="Eu1-or-Pgt"/>
                            <constraint firstItem="9uQ-FX-Tgd" firstAttribute="trailing" secondItem="abZ-ui-Epz" secondAttribute="trailing" id="K4m-jM-TIw"/>
                            <constraint firstItem="eUZ-GQ-zhz" firstAttribute="centerY" secondItem="9uQ-FX-Tgd" secondAttribute="centerY" id="MhJ-LK-wSM"/>
                            <constraint firstItem="abZ-ui-Epz" firstAttribute="leading" secondItem="9uQ-FX-Tgd" secondAttribute="leading" id="aos-eD-2Gk"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Sports Info" id="uc7-Pv-ahE"/>
                    <connections>
                        <outlet property="matchEventTableView" destination="abZ-ui-Epz" id="OHC-5N-Bos"/>
                        <outlet property="sportActivityIndicator" destination="eUZ-GQ-zhz" id="E46-xx-X5Q"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="u90-kt-Hag" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
